# public

./: .gitignore  LICENSE
bond2loxone/: LICENSE  MANIFEST.in  README.md  pyproject.toml
bond2loxone/examples/: default_mapping.json
bond2loxone/examples/example_output/: bond2loxone.LxAddon  cli_output.txt  output.txt
bond2loxone/examples/example_output/lxaddon_contents/inputs/: bond2loxone-autogenerated-ZPIG40653-inputs.xml  desc.json
bond2loxone/examples/example_output/lxaddon_contents/outputs/: bond2loxone-autogenerated-ZPIG40653-outputs.xml  desc.json
bond2loxone/src/bond2loxone/: bond.py  builtin_mappings.py  cli.py  config.py  generator.py  mapper.py
glfinancial/: Example GLFinancial Workbook.ipynb  GLFModel.py  GLFinancial.py  GLTaxTools.py
glfinancial/.ipynb_checkpoints/: Example GLFinancial Workbook-checkpoint.ipynb
tax/: Financial Modeling-v2.ipynb  Financial Modeling.ipynb  GLFModel.py  GLFinancial.py  GLLoanTools.py  GLTaxTools.py  Interactive Simulator.ipynb  Untitled.ipynb  glfinancial.py
tax/.ipynb_checkpoints/: Financial Modeling-checkpoint.ipynb  Financial Modeling-v2-checkpoint.ipynb  Interactive Simulator-checkpoint.ipynb
